tests/functional/lang/eval-fail-replaceStrings-6.err.exp
error:
       … while calling the 'replaceStrings' builtin
         at /pwd/lang/eval-fail-replaceStrings-6.nix:1:1:
            1| builtins.replaceStrings [ "old" ] [ "new" ] { }
             | ^
            2|

       … while evaluating the third argument passed to builtins.replaceStrings

       error: expected a string but found a set: { }
